--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Jerzon Hernandez",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
